--- a/src/vue-scheduler/styles/event-item.scss
+++ b/src/vue-scheduler/styles/event-item.scss
@@ -14,6 +14,10 @@
   background: #2e965b;
 }
 
+.scheduler-event-item-inner {
+  color: #CECECE;
+}
+
 .scheduler-event-item-inner.info {
   margin-left: 8px;
 }
